--- a/Personal_Website/Contact.html
+++ b/Personal_Website/Contact.html
@@ -28,15 +28,10 @@
     * Author: BootstrapMade.com
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
-
-    <style>
-      .header-bg{
-        background-color: black;
-      }
-    </style>
   </head>
 <body>
-  <header id="header" class="fixed-top header-bg">
+   <!-- ======= Header ======= -->
+   <header id="header" class="fixed-top bg-black">
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="Home.html">Delight David</a></h1>
@@ -45,12 +40,12 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/About.html">About</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/Counter.html">Work</a></li>
-          <li><a class="nav-link scrollto" href="#services">Skill</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/Contact.html">Contact</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/Contact.html">Resume</a></li>
+          <li><a class="nav-link scrollto" href="./Home.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="./About.html">About</a></li>
+          <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
+          <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
+          <li><a class="nav-link scrollto active" href="./Contact.html">Contact</a></li>
+          <li><a class="nav-link scrollto" href="./Resume.html">Resume</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -68,7 +63,7 @@
                     <div class="col-md-6">
                       <div class="title-box-2">
                         <h5 class="title-left">
-                          Send Message Us
+                          Connect With Me
                         </h5>
                       </div>
                       <div>
@@ -109,28 +104,26 @@
                     <div class="col-md-6">
                       <div class="title-box-2 pt-4 pt-md-0">
                         <h5 class="title-left">
-                          Get in Touch
+                          Holla at your gyal. 
                         </h5>
                       </div>
                       <div class="more-info">
                         <p class="lead">
-                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                          expedita aperiam aliquid at.
-                          Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                          mollitia inventore?
+                          Let's get this money!
                         </p>
                         <ul class="list-ico">
-                          <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                          <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                          <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                          <li><span class="bi bi-phone-fill"></span> +234 807 256 9907</li>
+                          <li><span class="bi bi-envelope-arrow-down"></span> adebukola.david@meltwater.org</li>
                         </ul>
                       </div>
                       <div class="socials">
-                        <ul>
-                          <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                          <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                          <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                          <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <ul class="d-flex gap-4">
+                          <li><a href=""><span><i class="bi bi-facebook"></i></span></a></li>
+                          <li><a href=""><span><i class="bi bi-whatsapp"></i></span></a></li>
+                          <li><a href="https://www.instagram.com/delight_adebukola/"><span><i class="bi bi-instagram"></i></span></a></li>
+                          <li><a href=""><span><i class="bi bi-twitter"></i></span></a></li>
+                          <li><a href="https://www.linkedin.com/in/delight-david/"><span><i class="bi bi-linkedin"></i></span></a></li>
+                          <li><a href="https://www.linkedin.com/in/delight-david/"><span><i class="bi bi-envelope-at-fill"></i></span></a></li>
                         </ul>
                       </div>
                     </div>
@@ -141,6 +134,17 @@
           </div>
         </div>
       </section><!-- End Contact Section -->
-  
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+  <script src="./assets/js/scroll-navigation.js"></script>
+
 </body>
 </html>
