--- a/Personal_Website/Counter.html
+++ b/Personal_Website/Counter.html
@@ -19,6 +19,27 @@
 >
 </head>
 <body>
+   <!-- ======= Header ======= -->
+   <header id="header" class="fixed-top bg-black">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <h1 class="logo"><a href="Home.html">Delight David</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="./About.html">About</a></li>
+          <li><a class="nav-link scrollto active" href="./Counter.html">Work</a></li>
+          <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
+          <li><a class="nav-link scrollto" href="./Contact.html">Contact</a></li>
+          <li><a class="nav-link scrollto" href="./Resume.html">Resume</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+    </div>
+  </header><!-- End Header -->
    <!-- ======= Services Section ======= -->
    <section id="services" class="services-mf pt-5 route">
     <div class="container">
@@ -141,7 +162,7 @@
                 </div>
                 <div class="counter-num">
                   <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1" class="counter purecounter"></p>
-                  <span class="counter-text">WORKS COMPLETED</span>
+                  <span class="counter-text">FUNDS RAISED</span>
                 </div>
               </div>
             </div>
@@ -163,7 +184,7 @@
                 </div>
                 <div class="counter-num">
                   <p data-purecounter-start="0" data-purecounter-end="550" data-purecounter-duration="1" class="counter purecounter"></p>
-                  <span class="counter-text">TOTAL CLIENTS</span>
+                  <span class="counter-text">BUSINESSES ADVISED</span>
                 </div>
               </div>
             </div>
@@ -174,12 +195,29 @@
                 </div>
                 <div class="counter-num">
                   <p data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="1" class="counter purecounter"></p>
-                  <span class="counter-text">AWARD WON</span>
+                  <span class="counter-text">COMPANIES WORKED WITH</span>
+                </div>
+                <div class="counter-num">
+                  <p data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="1" class="counter purecounter"></p>
+                  <span class="counter-text">COMPANIES WORKED WITH</span>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div><!-- End Counter Section -->
+
+      <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+  <script src="./assets/js/scroll-navigation.js"></script>
+
 </body>
 </html>
