--- a/Personal_Website/Home.html
+++ b/Personal_Website/Home.html
@@ -44,11 +44,11 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/About.html">About</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/Counter.html">Work</a></li>
-          <li><a class="nav-link scrollto" href="#services">Skill</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/Contact.html">Contact</a></li>
-          <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/Contact.html">Resume</a></li>
+          <li><a class="nav-link scrollto" href="./About.html">About</a></li>
+          <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
+          <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
+          <li><a class="nav-link scrollto" href="./Contact.html">Contact</a></li>
+          <li><a class="nav-link scrollto" href="./Resume.html">Resume</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -91,7 +91,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
+  <script src="./assets/js/"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 </body>
