--- a/Personal_Website/Skill.html
+++ b/Personal_Website/Skill.html
@@ -36,25 +36,38 @@
         </style>
       </head>
 <body>
-    <header id="header" class="fixed-top header-bg">
-        <div class="container d-flex align-items-center justify-content-between">
-    
-          <h1 class="logo"><a href="Home.html">Delight David</a></h1>
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-    
-          <nav id="navbar" class="navbar">
-            <ul>
-              <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-              <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/About.html">About</a></li>
-              <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/Counter.html">Work</a></li>
-              <li><a class="nav-link scrollto" href="#services">Skill</a></li>
-              <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/Contact.html">Contact</a></li>
-              <li><a class="nav-link scrollto" href="http://127.0.0.1:5500/DevFolio/Contact.html">Resume</a></li>
-            </ul>
-            <i class="bi bi-list mobile-nav-toggle"></i>
-          </nav><!-- .navbar -->
-        </div>
-      </header><!-- End Header -->
+     <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top bg-black">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <h1 class="logo"><a href="Home.html">Delight David</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="./About.html">About</a></li>
+          <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
+          <li><a class="nav-link scrollto active" href="./Skill.html">Skill</a></li>
+          <li><a class="nav-link scrollto" href="./Contact.html">Contact</a></li>
+          <li><a class="nav-link scrollto" href="./Resume.html">Resume</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+    </div>
+  </header><!-- End Header -->
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+  <script src="./assets/js/scroll-navigation.js"></script>
+
 </body>
 </html>
