--- a/About.html
+++ b/About.html
@@ -43,7 +43,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="./Home.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="./index.html">Home</a></li>
           <li><a class="nav-link scrollto active" href="./About.html">About</a></li>
           <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
           <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
