--- a/Counter.html
+++ b/Counter.html
@@ -29,7 +29,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="./About.html">About</a></li>
           <li><a class="nav-link scrollto active" href="./Counter.html">Work</a></li>
           <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
