--- a/About.html
+++ b/About.html
@@ -43,7 +43,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="./index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto active" href="./About.html">About</a></li>
           <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
           <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
@@ -74,6 +74,85 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
     <script src="./assets/js/scroll-navigation.js"></script>
-
+<!-- ======= Services Section ======= -->
+<section id="services" class="services-mf pt-5 route">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="title-box text-center">
+          <h3 class="title-a">
+            Services
+          </h3>
+          <p class="subtitle-a">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          </p>
+          <div class="line-mf"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Web Design</h2>
+            <p class="s-description text-center">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+              provident vitae! Magni
+              tempora perferendis eum non provident.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Web Development</h2>
+            <p class="s-description text-center">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+              provident vitae! Magni
+              tempora perferendis eum non provident.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Photography</h2>
+            <p class="s-description text-center">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+              provident vitae! Magni
+              tempora perferendis eum non provident.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Responsive Design</h2>
+            <p class="s-description text-center">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+              provident vitae! Magni
+              tempora perferendis eum non provident.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section><!-- End Services Section -->
 </body>
 </html>
