--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="./About.html">About</a></li>
           <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
           <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
@@ -56,7 +56,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/hero-bg.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/profile_picture\ \(1\).JPG)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
