Feat: Update features

--- a/About.html
+++ b/About.html
@@ -45,8 +45,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto active" href="./About.html">About</a></li>
-          <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
-          <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
+          <li><a class="nav-link scrollto" href="./Work.html">Work</a></li>
           <li><a class="nav-link scrollto" href="./Contact.html">Contact</a></li>
           <li><a class="nav-link scrollto" href="./Resume.html">Resume</a></li>
         </ul>
@@ -81,10 +80,11 @@
       <div class="col-sm-12">
         <div class="title-box text-center">
           <h3 class="title-a">
-            Services
+            Meet Delight
           </h3>
           <p class="subtitle-a">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+           <h2>Welcome to the delightful world of delight. Living life, making money and creating impact, one business at a time.
+</h2>
           </p>
           <div class="line-mf"></div>
         </div>
@@ -97,11 +97,11 @@
             <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
           </div>
           <div class="service-content">
-            <h2 class="s-title">Web Design</h2>
+            <h2 class="s-title">BUSINESS MANAGEMENT</h2>
             <p class="s-description text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-              provident vitae! Magni
-              tempora perferendis eum non provident.
+              <li>Processes & Structures</li>
+              <li>Strategy & Business Dev</li>
+              <li>HR Policies & Recruitment</li>
             </p>
           </div>
         </div>
@@ -112,11 +112,11 @@
             <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
           </div>
           <div class="service-content">
-            <h2 class="s-title">Web Development</h2>
+            <h2 class="s-title">PROGRAM MANAGEMENT</h2>
             <p class="s-description text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-              provident vitae! Magni
-              tempora perferendis eum non provident.
+              <li>Demo days</li>
+              <li>Investors Meets</li>
+              <li>Seminars and Webinars</li>
             </p>
           </div>
         </div>
@@ -127,11 +127,11 @@
             <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
           </div>
           <div class="service-content">
-            <h2 class="s-title">Photography</h2>
+            <h2 class="s-title">OPERATIONS MANAGEMENT</h2>
             <p class="s-description text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-              provident vitae! Magni
-              tempora perferendis eum non provident.
+              <li>Legal and Compliance</li>
+              <li>Day to Day Operations</li>
+              <li>Logistics and Supply Chain</li>
             </p>
           </div>
         </div>
@@ -142,11 +142,11 @@
             <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
           </div>
           <div class="service-content">
-            <h2 class="s-title">Responsive Design</h2>
+            <h2 class="s-title">Investment and Fundraise</h2>
             <p class="s-description text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-              provident vitae! Magni
-              tempora perferendis eum non provident.
+              <li>Investor Relations</li>
+              <li>Investment Readiness</li>
+              <li>Propoasl and Grant writing</li>
             </p>
           </div>
         </div>
