--- a/Contact.html
+++ b/Contact.html
@@ -42,8 +42,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="./index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="./About.html">About</a></li>
-          <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
-          <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
+          <li><a class="nav-link scrollto" href="./Work.html">Work</a></li>
           <li><a class="nav-link scrollto active" href="./Contact.html">Contact</a></li>
           <li><a class="nav-link scrollto" href="./Resume.html">Resume</a></li>
         </ul>
@@ -63,8 +62,7 @@
                     <div class="col-md-6">
                       <div class="title-box-2">
                         <h5 class="title-left">
-                          Connect With Me
-                        </h5>
+                        Let's Connect                        </h5>
                       </div>
                       <div>
                         <form action="forms/contact.php" method="post" role="form" class="php-email-form">
