--- a/Work.html
+++ b/Work.html
@@ -31,8 +31,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="./About.html">About</a></li>
-          <li><a class="nav-link scrollto active" href="./Counter.html">Work</a></li>
-          <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
+          <li><a class="nav-link scrollto active" href="./Work.html">Work</a></li>
           <li><a class="nav-link scrollto" href="./Contact.html">Contact</a></li>
           <li><a class="nav-link scrollto" href="./Resume.html">Resume</a></li>
         </ul>
@@ -52,8 +51,8 @@
                   <span class="ico-circle"><i class="bi bi-check"></i></span>
                 </div>
                 <div class="counter-num">
-                  <p data-purecounter-start="0" data-purecounter-end="500000" data-purecounter-duration="1" class="counter purecounter"></p>
-                  <span class="counter-text">FUNDS RAISED</span>
+                  <p data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="counter purecounter"></p>
+                  <span class="counter-text">PROGRAMS EXECUTED</span>
                 </div>
               </div>
             </div>
@@ -63,8 +62,8 @@
                   <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
                 </div>
                 <div class="counter-num">
-                  <p data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="counter purecounter"></p>
-                  <span class="counter-text">YEARS OF EXPERIENCE</span>
+                  <p data-purecounter-start="0" data-purecounter-end="600000" data-purecounter-duration="1" class="counter purecounter"></p>
+                  <span class="counter-text">FUNDS RAISED</span>
                 </div>
               </div>
             </div>
@@ -85,8 +84,8 @@
                   <span class="ico-circle"><i class="bi bi-award"></i></span>
                 </div>
                 <div class="counter-num">
-                  <p data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="counter purecounter"></p>
-                  <span class="counter-text">COMPANIES WORKED WITH</span>
+                  <p data-purecounter-start="0" data-purecounter-end="17" data-purecounter-duration="1" class="counter purecounter"></p>
+                  <span class="counter-text">RECRUITMENTS</span>
                 </div>
               </div>
             </div>
