--- a/Resume.html
+++ b/Resume.html
@@ -48,8 +48,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="./index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="./About.html">About</a></li>
-          <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
-          <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
+          <li><a class="nav-link scrollto" href="./Work.html">Work</a></li>
           <li><a class="nav-link scrollto" href="./Contact.html">Contact</a></li>
           <li><a class="nav-link scrollto active" href="./Resume.html">Resume</a></li>
         </ul>
