--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="./About.html">About</a></li>
-          <li><a class="nav-link scrollto" href="./Counter.html">Work</a></li>
-          <li><a class="nav-link scrollto" href="./Skill.html">Skill</a></li>
+          <li><a class="nav-link scrollto" href="./Work.html">Work</a></li>
           <li><a class="nav-link scrollto" href="./Contact.html">Contact</a></li>
           <li><a class="nav-link scrollto" href="./Resume.html">Resume</a></li>
         </ul>
@@ -63,7 +62,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Delight David</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Entrepreneur, HR Specialist, Business Advisory, Operations Executive, Tech Advocate"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Entrepreneur,  Program Manager, HR Specialist, Business Advisory, Operations Executive, Tech Advocate"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
