Last commit for assignment

--- a/About.html
+++ b/About.html
@@ -74,12 +74,12 @@
   <script src="assets/js/main.js"></script>
     <script src="./assets/js/scroll-navigation.js"></script>
 <!-- ======= Services Section ======= -->
-<section id="services" class="services-mf pt-5 route">
+<section id="services meet-id" class="services-mf pt-5 route">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
         <div class="title-box text-center">
-          <h3 class="title-a">
+          <h3 class="title-a i-class">
             Meet Delight
           </h3>
           <p class="subtitle-a">
